--- a/inlmn4/style.css
+++ b/inlmn4/style.css
@@ -59,7 +59,7 @@ form{
     -ms-user-select: none;
     user-select: none;
     position: absolute;
-    bottom: 5%;
+    top: 85vh;
     margin-left: 225px;
 }
 
