--- a/inlmn5/style.css
+++ b/inlmn5/style.css
@@ -7,3 +7,20 @@
     width: 300px;
     height: 50px;
 }
+
+.line{
+    margin-top: 5px;
+    height: 1px;
+    background-color: gray;
+    width: 80vw;
+}
+
+.stateChange{
+    color: red;
+    background-color: dodgerblue;
+}
+
+.clickedMost{
+     color: darkslategrey;
+    background-color: limegreen;
+}
